<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottomcontainer"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/delete_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/chontinh"
            android:layout_width="@dimen/_320sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/custom_radio2"
            android:hint="@string/chontinh"
            android:textSize="@dimen/_20sdp" />

        <Spinner
            android:id="@+id/spinner_chontinh"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/chonthanhpho"
            android:layout_width="@dimen/_320sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/custom_radio2"
            android:hint="@string/chonthanhpho"
            android:textSize="@dimen/_20sdp" />

        <Spinner
            android:id="@+id/spinner_chonthanhpho"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/chonquanhuye"
            android:layout_width="@dimen/_320sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/custom_radio2"
            android:hint="@string/quanhuyenxa"
            android:textSize="@dimen/_20sdp" />

        <Spinner
            android:id="@+id/spinner_chonquanhuyen"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_dong"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_gravity="right"
        android:textSize="@dimen/_10sdp"
        android:background="@drawable/custom_bottom"
        android:text="@string/loctin"
        android:textColor="@color/white" />
</LinearLayout>