<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".News.Add_news">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rl_setting_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/AccText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/taobangtincuutro"
                android:textColor="#444040"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.183"
                app:layout_constraintStart_toEndOf="@+id/img_back5"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_back5"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="#00FFFFFF"
                android:src="@drawable/quaylai"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="405dp"
            android:layout_height="1dp"
            android:background="#AD4E4C4C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_setting_acc" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:id="@+id/scrollview"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/custom_radio2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/chontinh"
                        android:layout_width="@dimen/_320sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/custom_radio2"
                        android:hint="@string/chontinh"
                        android:textSize="@dimen/_20sdp"></EditText>

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/location" />
                </LinearLayout>
                <!--                -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/chonthanhpho"
                        android:layout_width="@dimen/_320sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/custom_radio2"
                        android:hint="@string/chonthanhpho"
                        android:textSize="@dimen/_20sdp"></EditText>

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/location" />
                </LinearLayout>
                <!-- -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/quanhuyenxa"
                        android:layout_width="@dimen/_320sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/custom_radio2"
                        android:hint="@string/quanhuyenxa"
                        android:textSize="@dimen/_20sdp"></EditText>

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/location" />
                </LinearLayout>
                <!---->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/vịtricuaban"
                        android:layout_width="@dimen/_320sdp"
                        android:layout_height="@dimen/_55sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/custom_radio2"
                        android:hint="@string/vitricuaban"
                        android:textSize="@dimen/_20sdp"></EditText>

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/location" />
                </LinearLayout>
            </LinearLayout>
            <!--            -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/custom_radio2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_18sdp"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/nguoikeugoi"/>
                    <EditText
                        android:id="@+id/nguoikeugoi"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/custom_radio2"
                        android:textSize="@dimen/_20sdp"/>
                </LinearLayout>
                <!--                -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_18sdp"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/vaitro"/>
                    <EditText
                        android:id="@+id/vatro"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/custom_radio2"
                        android:textSize="@dimen/_20sdp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_18sdp"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/dienthoai"/>
                    <EditText
                        android:id="@+id/dienthoai"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/custom_radio2"
                        android:textSize="@dimen/_20sdp"/>
                </LinearLayout>
            </LinearLayout>
            <!--            -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/custom_radio2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_18sdp"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/motatinhhinh"/>
                    <EditText
                        android:id="@+id/motatinhhinh"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_65sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/custom_radio2"
                        android:textSize="@dimen/_20sdp"/>
                </LinearLayout>
                <!--                -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_18sdp"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/canhotronhunggi"/>
                    <EditText
                        android:id="@+id/canhotronhunggi"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_65sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/custom_radio2"
                        android:textSize="@dimen/_20sdp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:orientation="vertical">

                    <com.google.android.flexbox.FlexboxLayout
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:background="@drawable/custom_radio3">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_margin="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:background="@drawable/image" />

                        <TextView
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:text="@string/themanhtinhhinh"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_20sdp" />
                    </com.google.android.flexbox.FlexboxLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_luu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/custom_bottom"
                android:text="@string/luu"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/spinner"
                tools:ignore="MissingConstraints,NotSibling"
                tools:layout_editor_absoluteX="0dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>